--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@
 }
 html {
   font-size: 10px;
+  font-family: "Karla-regular", sans-serif;
 }
 body {
   background-color: hsl(148, 38%, 91%);
@@ -35,13 +36,13 @@ body {
   flex-direction: column;
   font-size: 2rem;
   color: hsl(187, 24%, 22%);
-  font-family: "Karla-regular", sans-serif;
   overflow: auto;
 }
 .form-container {
   position: absolute;
   background-color: hsl(0, 0%, 100%);
-  width: 42vw;
+  width: 50%;
+  max-width: 700px;
   height: max-content;
   border-radius: 15px;
   padding: 5rem 4rem;
@@ -89,7 +90,9 @@ input[type="checkbox"] {
   transform: scale(1.5);
   accent-color: hsl(169, 82%, 27%);
 }
-input:focus {
+input:focus,
+textarea:focus,
+button:focus {
   outline: none;
   border-color: hsl(169, 82%, 27%);
 }
@@ -227,5 +230,29 @@ label {
   .message-container__text {
     font-size: 1.7rem;
     margin: 1.2rem 0rem 2.8rem 0rem;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  html {
+    font-size: 6px;
+  }
+  .form-container {
+    max-width: 500px;
+  }
+}
+@media (min-width: 1025px) and (max-width: 1400px) {
+  html {
+    font-size: 7px;
+  }
+  .form-container {
+    max-width: 550px;
+  }
+}
+@media (min-width: 1401px) and (max-width: 2400px) {
+  html {
+    font-size: 8px;
+  }
+  .form-container {
+    max-width: 600px;
   }
 }
